--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h1>Ritika Joshi</h1>
         <div class="contact-info">
             <p>Ranchi, India 834001</p>
-            <p>Phone: +91-8987556702 | Email: ritikajoshi702@gmail.com</p>
+            <p>Phone: +91-8235025701 | Email: ritikajoshi702@gmail.com</p>
         </div>
 
         <div class="section">
@@ -74,6 +74,12 @@
                 <li><strong>Ayush Ministry Events</strong>: Performer and 1st position holder</li>
                 <li><strong>State Level Volleyball</strong>: 2nd position</li>
                 <li><strong>State Level Gymnastics</strong>: 3rd position</li>
+                <li><strong>National Player</strong> in Yoga and Gymnastics</li>
+                <li><strong>International Top 5</strong> in Yoga</li>
+                <li><strong>Qualified for National Games</strong> in Gymnastics</li>
+                <li><strong>Master's in Yoga</strong></li>
+                <li><strong>Teacher Training Courses</strong> from Rishikesh and Haridwar</li>
+                <li><strong>State and National Level Medalist</strong> in Yoga, Gymnastics, Volleyball</li>
             </ul>
         </div>
 
